<resources>
    <string name="app_name">ExamenEV1</string>
    <string name="iddepto">Id Depto</string>
    <string name="nombredepto">Nombre Depto</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="apellidos">Apellidos</string>
    <string name="iax_title">IAX</string>
    <string name="menu_item_aboutus">Sobre nosotros</string>
    <string name="action_settings">Preferencias</string>
    <string name="add">Añadir</string>
    <string name="search">Buscar</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="depto">Departamento</string>
    <string name="lugar">Lugar</string>
    <string name="tituloact">Título actividad</string>
    <string name="campoobligatorio">(*) Campo obligatorio</string>
    <string name="simple_info">Simple Info</string>
    <string name="msg">Evamen EV1 - Menú principal de la aplicación</string>
    <string name="simpleinfotitle">Título</string>
    <string name="simpleinfomsg">Este es el mensaje que quieres que se vea dentro de la alerta.</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="ok_cancel_dialog">OK CANCEL DIALOG</string>
    <string name="simple_info_ok_btn">Simple info ok btn</string>
    <string name="listado_deptos">DEPARTAMENTOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>