<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".actividades.DialogosActivity" >
    <item android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" /></menu>