<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/teal_700" >

    <TextView
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/depto"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/lugar"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/tituloact"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>